# raylib-gamedev

./: CMakeLists.txt  README.md  install.sh  mingw-toolchain.cmake  windows_build.sh
docs/: part_2.md  step_2.md
src/: force_includes.h  main.cpp
